Ajout plugin management + correction typo + ajout service back listes des couches concernées
